base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: reverse-proxy-deployment
spec:
    replicas: 1
    template:
        spec:
            containers:
                - name: reverseproxy
                  image: nginx/nginx
                  ports:
                  - containerPort: 80
                  volumeMounts:
                    - name: nginx-proxy-config
                      mountPath: /etc/nginx/proxy.conf
                      subPath: proxy.conf
                    - name: nginx-proxy-config
                      mountPath: /etc/nginx/nginx.conf
                      subPath: nginx.conf
            volumes:
                - name: nginx-proxy-config
                  configMap:
                    name: nginx-proxy-conf-v1
---
apiVersion: extensions/v1beta1
kind: DaemonSet
spec:
  template:
    spec:
      containers:
        -
          name: "kube-nginx-proxy"
          image: "kylemcc/kube-nginx-proxy:0.1.3"
          volumeMounts:
            - name: nginx-proxy-config
              mountPath: /etc/nginx/proxy.conf
              subPath: proxy.conf
            - name: nginx-proxy-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-proxy-config
          configMap:
            name: nginx-proxy-conf-v1
