base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-api-deployment
  labels:
    app: dependencyapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dependencyapi
  template:
    metadata:
      labels:
        app: dependencyapi
    spec:
      containers:
      - name: dependencyapi #requires 2 cores
        volumeMounts:
            - mountPath: /data
              name: dev-ceevee-data
        image: dependencytrack/apiserver
        resources:
          requests:
            memory: "4.5Gi"
            cpu: "2"
          limits:
            memory: "6Gi"
            cpu: "4"
        ports:
        - containerPort: 8080
      volumes:
        - name: dev-ceevee-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-track-deployment
  labels:
    app: dependencytrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dependencytrack
  template:
    metadata:
      labels:
        app: dependencytrack
    spec:
      containers:
      - name: dependencytrack #port in use
        image: dependencytrack/frontend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  #type: NodePort
  selector:
    app: dependencyapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: track-service
spec:
  #type: NodePort
  selector:
    app: dependencytrack
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 30000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: track-ingress
spec:
  rules:
    - host: nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: track-service
                port:
                  number: 80
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: track-route
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
spec:
  host: nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: track-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
      routerName: default
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.silver.devops.gov.bc.ca
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: track-policy
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 184.66.242.159/32
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    - podSelector: 
        matchLabels:
            app: dependencytrack
  policyTypes:
  - Ingress
---
