base/fett.yaml
---
# Source: base/templates/api-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-policy
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: 
        matchLabels:
            app: dependencyapi
  policyTypes:
  - Ingress
---
# Source: base/templates/api-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-external-policy
spec:
  podSelector: 
    matchLabels:
        app: dependencyapi
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  policyTypes:
  - Ingress
---
# Source: base/templates/pipeline.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector: 
    matchLabels:
      eventlistener: test-event-listener
  policyTypes:
  - Ingress
---
# Source: base/templates/track-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: track-policy
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: 
        matchLabels:
            app: dependencytrack
  policyTypes:
  - Ingress
---
# Source: base/templates/track-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: track-external-policy
spec:
  podSelector: 
    matchLabels:
        app: dependencytrack
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  policyTypes:
  - Ingress
---
# Source: base/templates/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# Source: base/templates/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  #type: NodePort
  selector:
    app: dependencyapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 30001
---
# Source: base/templates/track-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: track-service
spec:
  #type: NodePort
  selector:
    app: dependencytrack
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 30000
---
# Source: base/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 1004160000
        runAsGroup: 1004160000
        fsGroup: 1004160000
      containers:
        - name: postgres
          image: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: test-fett-data
      volumes:
        - name: test-fett-data
          persistentVolumeClaim:
            claimName: test-fett-data
---
# Source: base/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-api-deployment
  labels:
    app: dependencyapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dependencyapi
  template:
    metadata:
      labels:
        app: dependencyapi
    spec:
      containers:
      - name: dependencyapi #requires 2 cores
      #  volumeMounts:
      #      - mountPath: /data
      #        name: dev-ceevee-data
        #strategy: 
        #  type: Recreate #recreate b/c the api is super heavy
        image: dependencytrack/apiserver
        #env:
        #  - name: ALPINE_DATABASE_URL
        #    value: jdbc:h2:/data/.dependency-track/db
        #  - name: ALPINE_DATA_DIRECTORY
        #    value: /data/.dependency-track
        resources:
          requests:
            memory: "4.5Gi"
            cpu: "2"
          limits:
            memory: "6Gi"
            cpu: "3"
        ports:
        - containerPort: 8080
  strategy:
    type: Recreate
---
# Source: base/templates/track-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-track-deployment
  labels:
    app: dependencytrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dependencytrack
  template:
    metadata:
      labels:
        app: dependencytrack
    spec:
      containers:
      - name: dependencytrack #port in use
        image: dependencytrack/frontend
        ports:
        - containerPort: 8080
---
# Source: base/templates/api-deployment.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api-ingress
spec:
  rules:
    - host: test-nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-api-service
                port:
                  number: 80
---
# Source: base/templates/pipeline.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pipeline-ingress
spec:
  rules:
    - host: test-fett-pipeline.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-test-event-listener
                port:
                  number: 80
---
# Source: base/templates/track-deployment.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: track-ingress
spec:
  rules:
    - host: test-nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-track-service
                port:
                  number: 80
---
# Source: base/templates/api-deployment.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api-route
  annotations:
    haproxy.router.openshift.io/ip_whitelist: 184.66.242.159 142.34.143.128/26 142.32.0.0/16 142.34.208.209 142.34.40.0/24 204.103.55.21 142.29.82.93
    haproxy.router.openshift.io/rewrite-target: /
  labels:
    certbot-managed: 'true'
spec:
  host: test-nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
  path: "/api/v1"
  to:
    kind: Service
    name: test-api-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
# Source: base/templates/pipeline.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: event-listener
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
spec:
  host: test-fett-pipeline.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: el-test-event-listener
    weight: 100
  port:
    targetPort: 8000
  wildcardPolicy: None
---
# Source: base/templates/track-deployment.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: track-route
  annotations:
    haproxy.router.openshift.io/ip_whitelist: 184.66.242.159 142.34.143.128/26 142.32.0.0/16 142.34.208.209 142.34.40.0/24 204.103.55.21 142.29.82.93
  labels:
    certbot-managed: 'true'
spec:
  host: test-nrm-vulnerability-track.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: test-track-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
