base/pipeline.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector: {}
  policyTypes:
  - Ingress
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test
spec:
  rules:
    - host: event-listener-461a32-dev.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: event-listener
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
spec:
  host: event-listener-461a32-dev.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: dev-track-service
    weight: 100
  port:
    targetPort: 8000
  wildcardPolicy: None
status:
  ingress:
    - host: event-listener-461a32-dev.apps.silver.devops.gov.bc.ca
      routerName: default
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.silver.devops.gov.bc.ca
